frontend/src/pages/TermPlanner/main.less
html,
body {
  height: 100%;
}

.content {
  @small: ~"(max-width: 1400px)";

  .mainContainer {
    height: calc(100vh - 70px);
    overflow: auto;
  }

  .plannerContainer {
    display: flex;
    // align-items: center;
    margin-top: 0.5em;
    justify-content: center;
    margin-left: 1em;
    margin-right: 1em;
  }
  .unplannedColumn {
    max-width: 20.5em;
    margin-left: 1em;
    margin-right: 1em;
    align-self: stretch;
    flex: 1;
    @media @small {
      max-width: 19em;
    }
  }
  .gridContainer {
    display: grid;
    grid-template-columns: 7em 1fr 1fr 1fr;
    align-items: center;
    max-width: 100em;
    height: max-content;
  }

  .gridItem {
    font-size: 1.5rem;
    text-align: center;
  }
  .currYear {
    color: #9254de;
    font-weight: bold;
  }

  .termBox {
    margin: 1em;
    min-height: 18em;
    min-width: 20em;
    color: white;
    list-style: none;
    padding: 1.2em;
    border-radius: 2em;
    transition: 200ms ease-out;
    @media @small {
      min-width: 12em;
      min-height: 14em;
      border-radius: 1em;
    }
  }

  .summerGrid {
    grid-template-columns: 7em 1fr 1fr 1fr 1fr;
  }
  .summerTermBox {
    margin: 0.5em;
    min-height: 18em;
    min-width: 15em;
    padding: 1em;
    padding-top: 0.5em;
    border-radius: 1em;
    @media @small {
      min-height: 13.5em;
      min-width: 13em;
    }
  }

  .course {
    user-select: none;
    font-size: 0.8rem;
    cursor: grab;
    padding: 0.9em;
    padding-right: 1.1em;
    padding-left: 1.1em;
    border-radius: 1em;
    max-width: 20em;
    min-width: 12em;
    margin-top: 1em;
    display: flex;
    justify-content: center;
    gap: 0.7em;
    align-items: center;

    @media @small {
      border-radius: 2em;
      padding: 0.8em;
      width: 10em;
    }
  }

  .summerViewCourse {
    @media @small {
      width: 8em;
    }
  }

  .alert {
    max-width: 1.5em;
    max-height: 1.5em;
  }

  .ant-picker-dropdown {
    z-index: 10;
  }
  .panel {
    max-height: 30em;
    margin-bottom: 1em;
    overflow-y: auto;
    padding-right: 0.7em;
  }
  .skeletonTerm {
    margin: 0.5em;
    min-height: 10em;
    min-width: 12em;
    padding: 1.2em;
  }

  &::-webkit-scrollbar {
    width: 0.5em;
  }
  &::-webkit-scrollbar-track {
    background: #2e2e2e; /* color of the tracking area */
  }

  &::-webkit-scrollbar-thumb {
    background-color: #757575; /* color of the scroll thumb */
    border-radius: 1em;
  }

  .contextMenuIcon {
    margin-right: 0.5em;
  }

  .summerToggleBox {
    display: flex;
    align-items: center;
    gap: 1em;
    margin-bottom: 0.7em;
  }

  .leftButtons {
    display: flex;
  }

  .settingsButton {
    margin-left: 1em;
    margin-top: 1em;
    border: 1px solid #cecece;
    border-radius: 0.5em;
    padding: 0.5em 0.7em 0.3em 0.7em;
    cursor: pointer;
  }

  .clicked {
    background-color: #bfbfbf;
  }

  .settingsMenu {
    padding: 1em;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0.5em;
  }
  .settingsTitleContainer {
    width: auto;
  }

  .settingsTitle {
    margin-bottom: 0;
    text-align: left;
  }

  .settingsDivider {
    margin: 0.5em 0 0.5em 0;
  }

  .settingsEntry {
    display: flex;
    align-items: center;
    gap: 1em;
    margin-bottom: 1em;
  }

  .settingsSubtitle {
    margin-bottom: 0;
  }

  .helpMenu {
    padding: 1em;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.5em;
    grid-auto-rows: auto;
  }
  .helpTitleContainer {
    width: auto;
    grid-column-start: 1;
    grid-column-end: 3;
  }
  .helpButton {
    margin-right: 1em;
  }
  .helpGif {
    width: 100%;
    image-rendering: auto;
    border-radius: 12px;
    cursor: help;
  }

  .shadow {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }

  .tall {
    width: 70%;
    align-self: center;
  }

  .dragDisabledCourse:hover {
    // background-color: red;
    animation: shake 0.25s;
    transform: none;
    cursor: url("../../images/notAllowed.ico"), default;
  }

  @keyframes shake {
    0% {
      transform: rotate(1deg);
    }

    25% {
      transform: rotate(-1deg);
    }

    50% {
      transform: rotate(0deg);
    }

    75% {
      transform: rotate(1deg);
    }

    100% {
      transform: rotate(0deg);
    }
  }

  .prereqsTooltip {
    font-weight: bold;
    margin-bottom: 0.5em;
  }
  .tooltip {
    padding: 1em;
  }
  .eye {
    display: none;
  }
  .yearContainer {
    cursor: pointer;
    &:hover {
      .eye {
        display: block;
      }

      .year {
        display: none;
      }
    }
  }

  .optionsHeader {
    display: flex;
    justify-content: space-between;
  }


  .ant-collapse-header {
    color: white !important;
  }
}

.dark {

  .termBox {
    background-color: #242728;
  }

  .course {
    // background-color: #9254de;
    backdrop-filter: blur(9px) saturate(95%);
    -webkit-backdrop-filter: blur(9px) saturate(95%);
    background-color: rgba(146, 84, 222, 0.6);
    border-radius: 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
  }
  .warning {
    backdrop-filter: blur(9px) saturate(95%);
    -webkit-backdrop-filter: blur(9px) saturate(95%);
    background-color: rgba(254, 166, 82, 0.33);
    border-radius: 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
  }

  .droppable {
    background-color: #333738;
  }

  .plannerDrawer {
    background-color: #17191a;
  }

  .collapse {
    background-color: #9254de;
    border: #17191a;
    margin-bottom: 1em;
    width: 300px;
  }

  .ant-collapse-content-box {
    background-color: #26292b;
  }

  .helpNotif {
    background-color: #151718;
    .ant-notification-close-icon {
      color: #ffffff;
    }
  }
  .panel {
    scrollbar-width: thin;
    scrollbar-color: #323739 #25292b;

    &::-webkit-scrollbar {
      width: 0.4em; /* width of the entire scrollbar */
    }

    &::-webkit-scrollbar-track {
      background: #25292b; /* color of the tracking area */
    }

    &::-webkit-scrollbar-thumb {
      background-color: #3d4245; /* color of the scroll thumb */
      border-radius: 1em;
    }
  }

  .alert {
    background-color: #242728;
  }

  .termCheckbox {
    color: #373a3a;
    background-color: #1d1f20;
    transition: all 200ms ease;

    &:hover {
      color: #bfbbbb;
    }
  }

  .checkedTerm {
    color: #9685f3;
    &:hover {
      color: #b4a9f4;
    }
  }

  .dragDisabledCourse {
    background-color: rgba(146, 84, 222, 0.4);
    .text {
      color: #d2d2d2;
    }
  }

  .disabledWarning {
    background-color: rgba(186, 132, 81, 0.33);
  }

  .settingsButton {
    background-color: #0f1010;
    &:hover {
      background-color: #242728;
    }
  }

  .clicked {
    background-color: #242728;
  }
  .eye {
    color: #373a3a;
  }

  .settingsIcon {
    color: #3b3e3e;
  }



}

.light {
  .course {
    background-color: #d9d9d9;
  }
  .warning {
    background-color: #ffe8c3;
  }

  .termBox {
    border: 0.5px solid #d9d9d9;
  }

  .droppable {
    background-color: #e8fef2;
    border-style: none;
  }

  .plannerDrawer {
    background: #ffffff;
  }

  .collapse {
    background-color: #9685f3;
    margin-bottom: 1em;
  }

  .panel {
    scrollbar-width: thin;
    scrollbar-color: #d9d9d9 white;
    &::-webkit-scrollbar {
      width: 0.4em;
    }

    &::-webkit-scrollbar-track {
      background: white; /* color of the tracking area */
    }

    &::-webkit-scrollbar-thumb {
      background-color: #d9d9d9; /* color of the scroll thumb */
      border-radius: 1em;
    }
  }

  .alert {
    color: #323739;
    .ant-alert-message {
      color: #323739;
    }
  }

  .ant-picker-cell-inner {
    color: #323739;
  }

  .ant-btn .anticon-right {
    color: #9254de;
  }

  .termCheckbox {
    color: #e4e3e3;
    background-color: white;
    transition: all 200ms ease;

    &:hover {
      color: #bfbbbb;
    }
  }

  .checkedTerm {
    color: #9685f3;
    &:hover {
      color: #b4a9f4;
    }
  }

  .dragDisabledCourse {
    background-color: #eee;
    .text {
      color: #6c6c6c;
    }
  }

  .disabledWarning {
    background-color: #fff3e0;
  }

  .settingsButton {
    background-color: white;
    &:hover {
      background-color: #e3e3e3;
    }
  }

  .settingsIcon {
     color: #3e3e3e;
  }
}

